Add: Mejorar la configuración de temas para Angular Material y normalización de estilos

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,39 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "./normalice.css";
+@use "./themes/theme-colors" as theme;
+@use "@angular/material" as mat;
 
 html {
-  @include mat.theme((
-    color: (
-      theme-type: light,
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
-}/* You can add global styles to this file, and also import other style files */
+  color-scheme: light dark; // Simplemente especificamos al navegador que usaremos tanto el tema claro como oscuro con la misma configuración
+  @include mat.theme(
+    (
+      color: theme.$primary-palette,
+      typography: Roboto,
+      density: 0,
+    )
+  );
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  background-color: #ffffff;
+  background-image: radial-gradient(rgba(0, 0, 0, 0.1) 2px, transparent 0);
+  background-size: 30px 30px;
+  background-position: -5px -5px;
+  @media (prefers-color-scheme: dark) {
+    background-color: #1e1e1e;
+    background-image: radial-gradient(
+      rgba(255, 255, 255, 0.171) 2px,
+      transparent 0
+    );
+    background-size: 30px 30px;
+    background-position: -5px -5px;
+  }
+}
