--- a/src/app/pages/repositories/repositories.component.scss
+++ b/src/app/pages/repositories/repositories.component.scss
@@ -2,6 +2,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
+  view-transition-name: repos-page;
 
   .header-actions {
     display: flex;
