--- a/src/app/pages/repositories/repositories.component.scss
+++ b/src/app/pages/repositories/repositories.component.scss
@@ -6,6 +6,10 @@
 
   .header-actions {
     display: flex;
+    position: fixed;
+    z-index: 100;
+    top: 1rem;
+    left: 1rem;
     justify-content: flex-start;
     margin-bottom: 1rem;
 
@@ -23,7 +27,10 @@
   }
 
   h1 {
-    font-size: 2rem;
+    font-size: 3rem;
+    font-weight: 500;
+    word-spacing: 0.25rem;
+    margin-top: 3rem;
     margin-bottom: 2rem;
     color: var(--mat-sys-secondary);
     text-align: center;
@@ -45,23 +52,23 @@
 }
 
 .repositories-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   margin: 2rem 0;
 }
 
 .repository-card {
-  height: 100%;
+  flex: 1 1 350px;
   display: flex;
   flex-direction: column;
   cursor: default;
   user-select: none;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
   position: relative;
   overflow: hidden;
   border-radius: 0.75rem;
   border: 1px solid rgba(0, 0, 0, 0.05);
+  transition: all 0.3s ease-in-out;
 
   &::before {
     content: "";
@@ -69,7 +76,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 80px;
+    height: 90px;
     background: linear-gradient(
         135deg,
         rgba(0, 0, 0, 0.03) 0%,
@@ -86,18 +93,18 @@
   }
 
   &:hover {
-    transform: translateY(-5px);
-    box-shadow: var(--mat-sys-level3);
+    box-shadow: var(--mat-sys-level4);
   }
 
   mat-card-header {
-    padding: 1rem 1rem 0;
+    padding: 1rem 1.5rem;
     position: relative;
     z-index: 1;
 
     mat-card-title {
       margin-bottom: 0.5rem;
       font-size: 1.3rem;
+      font-weight: 500;
 
       a {
         color: var(--mat-sys-primary);
@@ -113,16 +120,21 @@
     }
 
     mat-card-subtitle {
-      color: var(--mat-sys-secondary);
-      font-size: 0.9rem;
-      opacity: 0.8;
-      margin-bottom: 0.75rem;
+      a {
+        color: var(--mat-sys-secondary);
+        font-size: 0.9rem;
+        opacity: 0.8;
+        margin-bottom: 0.75rem;
+        &:hover {
+          color: var(--mat-sys-primary);
+        }
+      }
     }
   }
 
   mat-card-content {
     flex: 1;
-    padding: 0 1rem 0.5rem;
+    padding: 1rem 1.5rem;
     color: var(--mat-sys-on-surface);
 
     p {
@@ -130,9 +142,10 @@
       margin-bottom: 1rem;
       line-height: 1.5;
       font-size: 0.95rem;
-      max-height: 4.5rem;
+      max-height: 5rem;
       overflow: hidden;
       display: -webkit-box;
+      line-clamp: 3;
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
     }
@@ -210,6 +223,7 @@
     justify-content: flex-end;
 
     a {
+      width: 100%;
       background-color: rgba(64, 120, 192, 0.05);
       border-radius: 1.25rem;
       font-size: 0.85rem;
@@ -270,9 +284,6 @@
 }
 
 .footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-top: 2rem;
   padding: 1rem;
   background-color: var(--mat-sys-surface-container);
