--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -39,6 +39,7 @@
         color="primary"
         class="search-button"
         [disabled]="form.invalid"
+        type="submit"
       >
         <span>Buscar</span>
         <mat-icon>arrow_forward</mat-icon>
